parser.output
Grammar

    0 $accept: program $end

    1 program: block

    2 block: LEFT_CURLY_BRACE stmts RIGHT_CURLY_BRACE
    3      | LEFT_CURLY_BRACE RIGHT_CURLY_BRACE

    4 stmts: stmt
    5      | stmts stmt

    6 stmt: block
    7     | expression EOS
    8     | set_expr EOS
    9     | identifier SET_MUL expression EOS
   10     | identifier SET_DIV expression EOS
   11     | identifier SET_MOD expression EOS
   12     | identifier SET_ADD expression EOS
   13     | identifier SET_SUB expression EOS
   14     | identifier SET_SHIFT_L expression EOS
   15     | identifier SET_SHIFT_R expression EOS
   16     | identifier SET_AND expression EOS
   17     | identifier SET_XOR expression EOS
   18     | identifier SET_OR expression EOS
   19     | empty_expr
   20     | IF LEFT_BRACE expression RIGHT_BRACE stmt
   21     | IF LEFT_BRACE expression RIGHT_BRACE stmt ELSE stmt
   22     | FOR LEFT_BRACE for_first EOS for_second EOS for_third RIGHT_BRACE stmt
   23     | DO expression WHILE stmt
   24     | WHILE LEFT_BRACE expression RIGHT_BRACE stmt
   25     | CONT EOS
   26     | BREAK EOS
   27     | PRINT LEFT_BRACE expression RIGHT_BRACE EOS
   28     | PRINT LEFT_BRACE STRINGLIT RIGHT_BRACE EOS
   29     | PRINT LEFT_BRACE STRINGLIT COMMA expression RIGHT_BRACE EOS
   30     | SCAN LEFT_BRACE identifier RIGHT_BRACE EOS

   31 set_expr: identifier SET expression

   32 empty_expr: EOS

   33 for_first: empty_expr
   34          | set_expr

   35 for_second: /* empty */
   36           | expression

   37 for_third: /* empty */
   38          | expression

   39 expression: NUMBER
   40           | identifier
   41           | INC identifier
   42           | identifier INC
   43           | DEC identifier
   44           | identifier DEC
   45           | PLUS expression
   46           | MINUS expression
   47           | LNEG expression
   48           | BNEG expression
   49           | expression PLUS expression
   50           | expression MINUS expression
   51           | expression MUL expression
   52           | expression DIV expression
   53           | expression SHIFTL expression
   54           | expression SHIFTR expression
   55           | expression LESS expression
   56           | expression MORE expression
   57           | expression LESS_EQ expression
   58           | expression MORE_EQ expression
   59           | expression BAND expression
   60           | expression BOR expression
   61           | expression BXOR expression
   62           | expression EQ expression
   63           | expression NEQ expression
   64           | expression OR expression
   65           | expression AND expression
   66           | expression MOD expression
   67           | LEFT_BRACE set_expr RIGHT_BRACE
   68           | LEFT_BRACE identifier SET_MUL expression RIGHT_BRACE
   69           | LEFT_BRACE identifier SET_DIV expression RIGHT_BRACE
   70           | LEFT_BRACE identifier SET_MOD expression RIGHT_BRACE
   71           | LEFT_BRACE identifier SET_ADD expression RIGHT_BRACE
   72           | LEFT_BRACE identifier SET_SUB expression RIGHT_BRACE
   73           | LEFT_BRACE identifier SET_SHIFT_L expression RIGHT_BRACE
   74           | LEFT_BRACE identifier SET_SHIFT_R expression RIGHT_BRACE
   75           | LEFT_BRACE identifier SET_AND expression RIGHT_BRACE
   76           | LEFT_BRACE identifier SET_XOR expression RIGHT_BRACE
   77           | LEFT_BRACE identifier SET_OR expression RIGHT_BRACE
   78           | LEFT_BRACE expression RIGHT_BRACE

   79 identifier: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
STRINGLIT (258) 28 29
IDENTIFIER (259) 79
NUMBER (260) 39
LEFT_CURLY_BRACE (261) 2 3
RIGHT_CURLY_BRACE (262) 2 3
LEFT_BRACE (263) 20 21 22 24 27 28 29 30 67 68 69 70 71 72 73 74 75
    76 77 78
RIGHT_BRACE (264) 20 21 22 24 27 28 29 30 67 68 69 70 71 72 73 74 75
    76 77 78
INC (265) 41 42
DEC (266) 43 44
PLUS (267) 45 49
MINUS (268) 46 50
MUL (269) 51
DIV (270) 52
LNEG (271) 47
BNEG (272) 48
SHIFTL (273) 53
SHIFTR (274) 54
LESS (275) 55
MORE (276) 56
LESS_EQ (277) 57
MORE_EQ (278) 58
BAND (279) 59
BOR (280) 60
OR (281) 64
AND (282) 65
MOD (283) 66
BXOR (284) 61
EQ (285) 62
NEQ (286) 63
SET_ADD (287) 12 71
SET (288) 31
SET_MUL (289) 9 68
SET_DIV (290) 10 69
SET_MOD (291) 11 70
SET_SUB (292) 13 72
SET_SHIFT_L (293) 14 73
SET_SHIFT_R (294) 15 74
SET_AND (295) 16 75
SET_XOR (296) 17 76
SET_OR (297) 18 77
IF (298) 20 21
FOR (299) 22
ELSE (300) 21
DO (301) 23
WHILE (302) 23 24
CONT (303) 25
BREAK (304) 26
PRINT (305) 27 28 29
SCAN (306) 30
EOS (307) 7 8 9 10 11 12 13 14 15 16 17 18 22 25 26 27 28 29 30 32
COMMA (308) 29
"then" (309)


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
program (56)
    on left: 1, on right: 0
block (57)
    on left: 2 3, on right: 1 6
stmts (58)
    on left: 4 5, on right: 2 5
stmt (59)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25
    26 27 28 29 30, on right: 4 5 20 21 22 23 24
set_expr (60)
    on left: 31, on right: 8 34 67
empty_expr (61)
    on left: 32, on right: 19 33
for_first (62)
    on left: 33 34, on right: 22
for_second (63)
    on left: 35 36, on right: 22
for_third (64)
    on left: 37 38, on right: 22
expression (65)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
    78, on right: 7 9 10 11 12 13 14 15 16 17 18 20 21 23 24 27 29
    31 36 38 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 65 66 68 69 70 71 72 73 74 75 76 77 78
identifier (66)
    on left: 79, on right: 9 10 11 12 13 14 15 16 17 18 30 31 40 41
    42 43 44 68 69 70 71 72 73 74 75 76 77


State 0

    0 $accept: . program $end

    LEFT_CURLY_BRACE  shift, and go to state 1

    program  go to state 2
    block    go to state 3


State 1

    2 block: LEFT_CURLY_BRACE . stmts RIGHT_CURLY_BRACE
    3      | LEFT_CURLY_BRACE . RIGHT_CURLY_BRACE

    IDENTIFIER         shift, and go to state 4
    NUMBER             shift, and go to state 5
    LEFT_CURLY_BRACE   shift, and go to state 1
    RIGHT_CURLY_BRACE  shift, and go to state 6
    LEFT_BRACE         shift, and go to state 7
    INC                shift, and go to state 8
    DEC                shift, and go to state 9
    PLUS               shift, and go to state 10
    MINUS              shift, and go to state 11
    LNEG               shift, and go to state 12
    BNEG               shift, and go to state 13
    IF                 shift, and go to state 14
    FOR                shift, and go to state 15
    DO                 shift, and go to state 16
    WHILE              shift, and go to state 17
    CONT               shift, and go to state 18
    BREAK              shift, and go to state 19
    PRINT              shift, and go to state 20
    SCAN               shift, and go to state 21
    EOS                shift, and go to state 22

    block       go to state 23
    stmts       go to state 24
    stmt        go to state 25
    set_expr    go to state 26
    empty_expr  go to state 27
    expression  go to state 28
    identifier  go to state 29


State 2

    0 $accept: program . $end

    $end  shift, and go to state 30


State 3

    1 program: block .

    $default  reduce using rule 1 (program)


State 4

   79 identifier: IDENTIFIER .

    $default  reduce using rule 79 (identifier)


State 5

   39 expression: NUMBER .

    $default  reduce using rule 39 (expression)


State 6

    3 block: LEFT_CURLY_BRACE RIGHT_CURLY_BRACE .

    $default  reduce using rule 3 (block)


State 7

   67 expression: LEFT_BRACE . set_expr RIGHT_BRACE
   68           | LEFT_BRACE . identifier SET_MUL expression RIGHT_BRACE
   69           | LEFT_BRACE . identifier SET_DIV expression RIGHT_BRACE
   70           | LEFT_BRACE . identifier SET_MOD expression RIGHT_BRACE
   71           | LEFT_BRACE . identifier SET_ADD expression RIGHT_BRACE
   72           | LEFT_BRACE . identifier SET_SUB expression RIGHT_BRACE
   73           | LEFT_BRACE . identifier SET_SHIFT_L expression RIGHT_BRACE
   74           | LEFT_BRACE . identifier SET_SHIFT_R expression RIGHT_BRACE
   75           | LEFT_BRACE . identifier SET_AND expression RIGHT_BRACE
   76           | LEFT_BRACE . identifier SET_XOR expression RIGHT_BRACE
   77           | LEFT_BRACE . identifier SET_OR expression RIGHT_BRACE
   78           | LEFT_BRACE . expression RIGHT_BRACE

    IDENTIFIER  shift, and go to state 4
    NUMBER      shift, and go to state 5
    LEFT_BRACE  shift, and go to state 7
    INC         shift, and go to state 8
    DEC         shift, and go to state 9
    PLUS        shift, and go to state 10
    MINUS       shift, and go to state 11
    LNEG        shift, and go to state 12
    BNEG        shift, and go to state 13

    set_expr    go to state 31
    expression  go to state 32
    identifier  go to state 33


State 8

   41 expression: INC . identifier

    IDENTIFIER  shift, and go to state 4

    identifier  go to state 34


State 9

   43 expression: DEC . identifier

    IDENTIFIER  shift, and go to state 4

    identifier  go to state 35


State 10

   45 expression: PLUS . expression

    IDENTIFIER  shift, and go to state 4
    NUMBER      shift, and go to state 5
    LEFT_BRACE  shift, and go to state 7
    INC         shift, and go to state 8
    DEC         shift, and go to state 9
    PLUS        shift, and go to state 10
    MINUS       shift, and go to state 11
    LNEG        shift, and go to state 12
    BNEG        shift, and go to state 13

    expression  go to state 36
    identifier  go to state 37


State 11

   46 expression: MINUS . expression

    IDENTIFIER  shift, and go to state 4
    NUMBER      shift, and go to state 5
    LEFT_BRACE  shift, and go to state 7
    INC         shift, and go to state 8
    DEC         shift, and go to state 9
    PLUS        shift, and go to state 10
    MINUS       shift, and go to state 11
    LNEG        shift, and go to state 12
    BNEG        shift, and go to state 13

    expression  go to state 38
    identifier  go to state 37


State 12

   47 expression: LNEG . expression

    IDENTIFIER  shift, and go to state 4
    NUMBER      shift, and go to state 5
    LEFT_BRACE  shift, and go to state 7
    INC         shift, and go to state 8
    DEC         shift, and go to state 9
    PLUS        shift, and go to state 10
    MINUS       shift, and go to state 11
    LNEG        shift, and go to state 12
    BNEG        shift, and go to state 13

    expression  go to state 39
    identifier  go to state 37


State 13

   48 expression: BNEG . expression

    IDENTIFIER  shift, and go to state 4
    NUMBER      shift, and go to state 5
    LEFT_BRACE  shift, and go to state 7
    INC         shift, and go to state 8
    DEC         shift, and go to state 9
    PLUS        shift, and go to state 10
    MINUS       shift, and go to state 11
    LNEG        shift, and go to state 12
    BNEG        shift, and go to state 13

    expression  go to state 40
    identifier  go to state 37


State 14

   20 stmt: IF . LEFT_BRACE expression RIGHT_BRACE stmt
   21     | IF . LEFT_BRACE expression RIGHT_BRACE stmt ELSE stmt

    LEFT_BRACE  shift, and go to state 41


State 15

   22 stmt: FOR . LEFT_BRACE for_first EOS for_second EOS for_third RIGHT_BRACE stmt

    LEFT_BRACE  shift, and go to state 42


State 16

   23 stmt: DO . expression WHILE stmt

    IDENTIFIER  shift, and go to state 4
    NUMBER      shift, and go to state 5
    LEFT_BRACE  shift, and go to state 7
    INC         shift, and go to state 8
    DEC         shift, and go to state 9
    PLUS        shift, and go to state 10
    MINUS       shift, and go to state 11
    LNEG        shift, and go to state 12
    BNEG        shift, and go to state 13

    expression  go to state 43
    identifier  go to state 37


State 17

   24 stmt: WHILE . LEFT_BRACE expression RIGHT_BRACE stmt

    LEFT_BRACE  shift, and go to state 44


State 18

   25 stmt: CONT . EOS

    EOS  shift, and go to state 45


State 19

   26 stmt: BREAK . EOS

    EOS  shift, and go to state 46


State 20

   27 stmt: PRINT . LEFT_BRACE expression RIGHT_BRACE EOS
   28     | PRINT . LEFT_BRACE STRINGLIT RIGHT_BRACE EOS
   29     | PRINT . LEFT_BRACE STRINGLIT COMMA expression RIGHT_BRACE EOS

    LEFT_BRACE  shift, and go to state 47


State 21

   30 stmt: SCAN . LEFT_BRACE identifier RIGHT_BRACE EOS

    LEFT_BRACE  shift, and go to state 48


State 22

   32 empty_expr: EOS .

    $default  reduce using rule 32 (empty_expr)


State 23

    6 stmt: block .

    $default  reduce using rule 6 (stmt)


State 24

    2 block: LEFT_CURLY_BRACE stmts . RIGHT_CURLY_BRACE
    5 stmts: stmts . stmt

    IDENTIFIER         shift, and go to state 4
    NUMBER             shift, and go to state 5
    LEFT_CURLY_BRACE   shift, and go to state 1
    RIGHT_CURLY_BRACE  shift, and go to state 49
    LEFT_BRACE         shift, and go to state 7
    INC                shift, and go to state 8
    DEC                shift, and go to state 9
    PLUS               shift, and go to state 10
    MINUS              shift, and go to state 11
    LNEG               shift, and go to state 12
    BNEG               shift, and go to state 13
    IF                 shift, and go to state 14
    FOR                shift, and go to state 15
    DO                 shift, and go to state 16
    WHILE              shift, and go to state 17
    CONT               shift, and go to state 18
    BREAK              shift, and go to state 19
    PRINT              shift, and go to state 20
    SCAN               shift, and go to state 21
    EOS                shift, and go to state 22

    block       go to state 23
    stmt        go to state 50
    set_expr    go to state 26
    empty_expr  go to state 27
    expression  go to state 28
    identifier  go to state 29


State 25

    4 stmts: stmt .

    $default  reduce using rule 4 (stmts)


State 26

    8 stmt: set_expr . EOS

    EOS  shift, and go to state 51


State 27

   19 stmt: empty_expr .

    $default  reduce using rule 19 (stmt)


State 28

    7 stmt: expression . EOS
   49 expression: expression . PLUS expression
   50           | expression . MINUS expression
   51           | expression . MUL expression
   52           | expression . DIV expression
   53           | expression . SHIFTL expression
   54           | expression . SHIFTR expression
   55           | expression . LESS expression
   56           | expression . MORE expression
   57           | expression . LESS_EQ expression
   58           | expression . MORE_EQ expression
   59           | expression . BAND expression
   60           | expression . BOR expression
   61           | expression . BXOR expression
   62           | expression . EQ expression
   63           | expression . NEQ expression
   64           | expression . OR expression
   65           | expression . AND expression
   66           | expression . MOD expression

    PLUS     shift, and go to state 52
    MINUS    shift, and go to state 53
    MUL      shift, and go to state 54
    DIV      shift, and go to state 55
    SHIFTL   shift, and go to state 56
    SHIFTR   shift, and go to state 57
    LESS     shift, and go to state 58
    MORE     shift, and go to state 59
    LESS_EQ  shift, and go to state 60
    MORE_EQ  shift, and go to state 61
    BAND     shift, and go to state 62
    BOR      shift, and go to state 63
    OR       shift, and go to state 64
    AND      shift, and go to state 65
    MOD      shift, and go to state 66
    BXOR     shift, and go to state 67
    EQ       shift, and go to state 68
    NEQ      shift, and go to state 69
    EOS      shift, and go to state 70


State 29

    9 stmt: identifier . SET_MUL expression EOS
   10     | identifier . SET_DIV expression EOS
   11     | identifier . SET_MOD expression EOS
   12     | identifier . SET_ADD expression EOS
   13     | identifier . SET_SUB expression EOS
   14     | identifier . SET_SHIFT_L expression EOS
   15     | identifier . SET_SHIFT_R expression EOS
   16     | identifier . SET_AND expression EOS
   17     | identifier . SET_XOR expression EOS
   18     | identifier . SET_OR expression EOS
   31 set_expr: identifier . SET expression
   40 expression: identifier .
   42           | identifier . INC
   44           | identifier . DEC

    INC          shift, and go to state 71
    DEC          shift, and go to state 72
    SET_ADD      shift, and go to state 73
    SET          shift, and go to state 74
    SET_MUL      shift, and go to state 75
    SET_DIV      shift, and go to state 76
    SET_MOD      shift, and go to state 77
    SET_SUB      shift, and go to state 78
    SET_SHIFT_L  shift, and go to state 79
    SET_SHIFT_R  shift, and go to state 80
    SET_AND      shift, and go to state 81
    SET_XOR      shift, and go to state 82
    SET_OR       shift, and go to state 83

    $default  reduce using rule 40 (expression)


State 30

    0 $accept: program $end .

    $default  accept


State 31

   67 expression: LEFT_BRACE set_expr . RIGHT_BRACE

    RIGHT_BRACE  shift, and go to state 84


State 32

   49 expression: expression . PLUS expression
   50           | expression . MINUS expression
   51           | expression . MUL expression
   52           | expression . DIV expression
   53           | expression . SHIFTL expression
   54           | expression . SHIFTR expression
   55           | expression . LESS expression
   56           | expression . MORE expression
   57           | expression . LESS_EQ expression
   58           | expression . MORE_EQ expression
   59           | expression . BAND expression
   60           | expression . BOR expression
   61           | expression . BXOR expression
   62           | expression . EQ expression
   63           | expression . NEQ expression
   64           | expression . OR expression
   65           | expression . AND expression
   66           | expression . MOD expression
   78           | LEFT_BRACE expression . RIGHT_BRACE

    RIGHT_BRACE  shift, and go to state 85
    PLUS         shift, and go to state 52
    MINUS        shift, and go to state 53
    MUL          shift, and go to state 54
    DIV          shift, and go to state 55
    SHIFTL       shift, and go to state 56
    SHIFTR       shift, and go to state 57
    LESS         shift, and go to state 58
    MORE         shift, and go to state 59
    LESS_EQ      shift, and go to state 60
    MORE_EQ      shift, and go to state 61
    BAND         shift, and go to state 62
    BOR          shift, and go to state 63
    OR           shift, and go to state 64
    AND          shift, and go to state 65
    MOD          shift, and go to state 66
    BXOR         shift, and go to state 67
    EQ           shift, and go to state 68
    NEQ          shift, and go to state 69


State 33

   31 set_expr: identifier . SET expression
   40 expression: identifier .
   42           | identifier . INC
   44           | identifier . DEC
   68           | LEFT_BRACE identifier . SET_MUL expression RIGHT_BRACE
   69           | LEFT_BRACE identifier . SET_DIV expression RIGHT_BRACE
   70           | LEFT_BRACE identifier . SET_MOD expression RIGHT_BRACE
   71           | LEFT_BRACE identifier . SET_ADD expression RIGHT_BRACE
   72           | LEFT_BRACE identifier . SET_SUB expression RIGHT_BRACE
   73           | LEFT_BRACE identifier . SET_SHIFT_L expression RIGHT_BRACE
   74           | LEFT_BRACE identifier . SET_SHIFT_R expression RIGHT_BRACE
   75           | LEFT_BRACE identifier . SET_AND expression RIGHT_BRACE
   76           | LEFT_BRACE identifier . SET_XOR expression RIGHT_BRACE
   77           | LEFT_BRACE identifier . SET_OR expression RIGHT_BRACE

    INC          shift, and go to state 71
    DEC          shift, and go to state 72
    SET_ADD      shift, and go to state 86
    SET          shift, and go to state 74
    SET_MUL      shift, and go to state 87
    SET_DIV      shift, and go to state 88
    SET_MOD      shift, and go to state 89
    SET_SUB      shift, and go to state 90
    SET_SHIFT_L  shift, and go to state 91
    SET_SHIFT_R  shift, and go to state 92
    SET_AND      shift, and go to state 93
    SET_XOR      shift, and go to state 94
    SET_OR       shift, and go to state 95

    $default  reduce using rule 40 (expression)


State 34

   41 expression: INC identifier .

    $default  reduce using rule 41 (expression)


State 35

   43 expression: DEC identifier .

    $default  reduce using rule 43 (expression)


State 36

   45 expression: PLUS expression .
   49           | expression . PLUS expression
   50           | expression . MINUS expression
   51           | expression . MUL expression
   52           | expression . DIV expression
   53           | expression . SHIFTL expression
   54           | expression . SHIFTR expression
   55           | expression . LESS expression
   56           | expression . MORE expression
   57           | expression . LESS_EQ expression
   58           | expression . MORE_EQ expression
   59           | expression . BAND expression
   60           | expression . BOR expression
   61           | expression . BXOR expression
   62           | expression . EQ expression
   63           | expression . NEQ expression
   64           | expression . OR expression
   65           | expression . AND expression
   66           | expression . MOD expression

    LESS     shift, and go to state 58
    MORE     shift, and go to state 59
    LESS_EQ  shift, and go to state 60
    MORE_EQ  shift, and go to state 61
    EQ       shift, and go to state 68
    NEQ      shift, and go to state 69

    $default  reduce using rule 45 (expression)


State 37

   40 expression: identifier .
   42           | identifier . INC
   44           | identifier . DEC

    INC  shift, and go to state 71
    DEC  shift, and go to state 72

    $default  reduce using rule 40 (expression)


State 38

   46 expression: MINUS expression .
   49           | expression . PLUS expression
   50           | expression . MINUS expression
   51           | expression . MUL expression
   52           | expression . DIV expression
   53           | expression . SHIFTL expression
   54           | expression . SHIFTR expression
   55           | expression . LESS expression
   56           | expression . MORE expression
   57           | expression . LESS_EQ expression
   58           | expression . MORE_EQ expression
   59           | expression . BAND expression
   60           | expression . BOR expression
   61           | expression . BXOR expression
   62           | expression . EQ expression
   63           | expression . NEQ expression
   64           | expression . OR expression
   65           | expression . AND expression
   66           | expression . MOD expression

    LESS     shift, and go to state 58
    MORE     shift, and go to state 59
    LESS_EQ  shift, and go to state 60
    MORE_EQ  shift, and go to state 61
    EQ       shift, and go to state 68
    NEQ      shift, and go to state 69

    $default  reduce using rule 46 (expression)


State 39

   47 expression: LNEG expression .
   49           | expression . PLUS expression
   50           | expression . MINUS expression
   51           | expression . MUL expression
   52           | expression . DIV expression
   53           | expression . SHIFTL expression
   54           | expression . SHIFTR expression
   55           | expression . LESS expression
   56           | expression . MORE expression
   57           | expression . LESS_EQ expression
   58           | expression . MORE_EQ expression
   59           | expression . BAND expression
   60           | expression . BOR expression
   61           | expression . BXOR expression
   62           | expression . EQ expression
   63           | expression . NEQ expression
   64           | expression . OR expression
   65           | expression . AND expression
   66           | expression . MOD expression

    LESS     shift, and go to state 58
    MORE     shift, and go to state 59
    LESS_EQ  shift, and go to state 60
    MORE_EQ  shift, and go to state 61
    EQ       shift, and go to state 68
    NEQ      shift, and go to state 69

    $default  reduce using rule 47 (expression)


State 40
